# MultiplayerCars

./: .gitignore  README.md
CPPClient/: .gitignore  CMakeLists.txt  build_debug_client_nmake.bat  build_default_client.bat  build_default_debug_client.bat  build_default_debug_client.sh  build_default_release_client.bat  build_default_release_client.sh  build_release_client_nmake.bat  clean_dependencies.bat  clean_dependencies.sh  main.cpp  setup_debug_dependencies.bat  setup_dependencies.sh  setup_library_env.sh  setup_release_dependencies.bat  setup_release_socketio_removeme.bat
CPPClient/gui/: carClass.cpp  carClass.hpp  event.hpp  threadSafeQueue.hpp  uuidGenerator.hpp  version.hpp  windowContext.cpp  windowContext.hpp
CPPClient/http/: postRequest.cpp  postRequest.hpp
CPPClient/websocket/: websocketConnect.cpp  websocketConnect.hpp  websocketSession.cpp  websocketSession.hpp
GoServer/: Procfile  client.go  event.go  go.mod  main.go  manager.go
NodeServer/: package-lock.json  package.json  server.js
